# Geist-Core

./: .gitignore  RAGSystem.js  README.md  next.config.ts  package-lock.json  package.json
src/: declerations.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ai/: dev.ts  genkit.ts
src/ai/flows/: chat.ts  rag-chat.ts  summarize-uploaded-documents.ts  web-search-assisted-chat.ts
src/app/: favicon.ico~  globals.css  layout.tsx
src/app/(main)/: layout.tsx  page.tsx
src/app/(main)/settings/: page.tsx
src/app/api/chat/: route.ts
src/app/api/google/: route.ts
src/app/api/llama-cpp/start/: route.ts
src/app/api/llama-cpp/unload/: route.ts
src/app/api/ollama/: route.ts
src/app/api/ollama/unload/: route.ts
src/components/: geist-logo.tsx  sidebar.tsx
src/components/chat/: chat-avatar.tsx  chat-history-list.tsx  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat-panel.tsx  rag-manager.tsx  rename-conversation-dialog.tsx  welcome-message.tsx
src/components/settings/: settings-form.tsx
src/hooks/: use-settings.ts
src/lib/: llama-server-utils.ts  local-llm.ts
src/stores/: chat-store.ts  sidebar-store.ts
