[package]
name = "app"
version = "0.1.0"
description = "Geist Chat"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
# This is the correct version required by tauri v2.8.5
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# This is the correct version for the main tauri runtime
tauri = { version = "2.8.5", features = [] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# All plugins must use their latest compatible RC versions
tauri-plugin-dialog = "2.0.0-rc.1"
tauri-plugin-log = "2.0.0-rc.1"
tauri-plugin-shell = "2.0.0-rc.1"

usearch = "2.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
