[package]
name = "geist-core"
version = "1.0.0"
description = "Geist Chat"
authors = ["wiredgeist.com"]
license = "MIT"
repository = "https://github.com/WiredGeist/Geist-Core"
edition = "2021"

[build-dependencies]
# This is the correct version required by tauri v2.8.5
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# THIS IS THE CORRECTED LINE
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# All plugins must use their latest compatible RC versions
tauri-plugin-dialog = "2.4.0"
tauri-plugin-log = "2.7.0"
tauri-plugin-shell = "2.3.1"

usearch = "2.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-http = "2.5.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
